--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Auth Service
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/auth_service
+spring.datasource.username=theAsk
+spring.datasource.password=elAllan!!12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.datasource.hikari.connection-timeout=20000
