--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Auth Service
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/auth_service
+spring.datasource.url=jdbc:mysql://localhost:3306/auth_service?createDatabaseIfNotExist=true
 spring.datasource.username=theAsk
 spring.datasource.password=elAllan!!12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
